[project]
name = "ieeLabTools"
version = "0.1.3"
description = "General linear symbolic + numeric uncertainty propagation, weighted linear regression"
authors = [
  { name = "ieepirzy", email = "nervy_colder_1m@icloud.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sympy",
  "numpy"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ieepirzy/ieeLabTools"
Documentation = "https://github.com/ieepirzy/ieeLabTools/blob/main/Docs/Documentation.md"
Source = "https://github.com/ieepirzy/ieeLabTools/blob/main/Source/core.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ieeLabTools"]
